<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memo Stack</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="clear">Clear</string>
    <string name="no_reported_errors">No reported errors were found.</string>
    <string name="show_errors">Show Errors</string>
    <string name="reload">Reload</string>
    <string name="new_memo">New Memo</string>
    <string name="empty">(empty)</string>
    <string name="id">ID</string>
    <string name="text">Text</string>
    <string name="page">Page</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="set">Set</string>
    <string name="server">Server</string>
    <string name="server_0">http://10.0.2.2:3000</string>
    <string name="server_1">http://192.168.1.101:3000</string>
    <string name="version">Version</string>
    <string name="v_1_0">1.0</string>
    <string name="api_url">API URL</string>

</resources>
