<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/memo_new_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="4dp" 
        android:layout_marginBottom="4dp"
        android:background="#c0c0c0" />

    <EditText
        android:id="@+id/memo_new_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/text"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="4dp" 
        android:layout_marginBottom="4dp"
        android:background="#c0c0c0" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  >

        <Button
            android:id="@+id/memo_new_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/memo_new_post"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post" />

    </LinearLayout>


</LinearLayout>
